Fix a crash in mirror decoration when closing Krita

1) We should delete all the decorations before killing the canvas.
   Otherwise orphan events can reach them and they will try to access
   half-destructed view and canvas objects.

2) Make Mirror Axis decoration filter the events only in case it
   is visible.

BUG:362482
Fixes T2402